# pybingo

./: LICENSE  README.md  bingocard.html  bingogame.html  index.html  pyproject.toml  robots.txt  script_bingo.py  search.json  settings.ini  sitemap.xml
.github/workflows/: deploy.yaml  test.yaml
nbs/: 00_BingoCard.ipynb  01_BingoCard.ipynb  02_BingoGame.ipynb  index.ipynb  nbdev.yml  sidebar.yml
pybingo/: BingGame.py  BingoCard.py  BingoGame.py  _modidx.py
