[tool.poetry]
name = "pybingo"
version = "0.1.0"
description = "solution to a AOC challenged, related to bingo"
authors = ["David Weinberg <weinbergphp@gmail.com>"]
license = "Apache2.0"
readme = "README.md"

packages = [
    { include = "./pybingo" },
]

[tool.poetry.dependencies]
python = "^3.10"
nbdev = "^2.3.12"
jupyterlab = "^4.0.3"
jupyterlab-quarto = "^0.2.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
